--- a/graficasIndicadores/_css/estiloAnalista.css
+++ b/graficasIndicadores/_css/estiloAnalista.css
@@ -1,5 +1,4 @@
-.highcharts-figure,
-.highcharts-data-table table {
+.highcharts-figure.{
     min-width: 239.6px;
     max-width: 116.83px;
     margin: 1em auto;
@@ -39,10 +38,6 @@
 .highcharts-data-table tr:hover {
     background: #f1f7ff;
 }
-
-
-
-
 
 .highcharts-data-table caption {
     padding: 1em 0;
